--- a/src/view/layouts/main.fxml
+++ b/src/view/layouts/main.fxml
@@ -2,7 +2,6 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
-<?import de.jensd.fx.glyphs.testapps.GlyphsBrowser?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -12,25 +11,26 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="982.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="982.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
    <children>
-      <VBox prefHeight="626.0" prefWidth="252.0" style="-fx-background-color: #252529;">
+      <Pane fx:id="mainPane" layoutX="252.0" prefHeight="626.0" prefWidth="730.0" style="-fx-background-color: #252529;" />
+      <VBox id="vbox" prefHeight="626.0" prefWidth="256.0" style="-fx-background-color: #252529;" stylesheets="@../../resources/css/style.css">
          <children>
             <Pane prefHeight="180.0" prefWidth="252.0">
                <children>
-                  <ImageView fitHeight="56.0" fitWidth="56.0" layoutX="24.0" layoutY="70.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="74.0" fitWidth="69.0" layoutX="14.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../resources/icons/icons8-seringa-96.png" />
                      </image>
                   </ImageView>
-                  <Label id="test" layoutX="89.0" layoutY="85.0" prefHeight="35.0" prefWidth="140.0" text="Covid Vaccine" textFill="WHITE">
+                  <Label contentDisplay="CENTER" layoutX="83.0" layoutY="70.0" prefHeight="35.0" prefWidth="140.0" text="Covid Vaccine" textFill="WHITE">
                      <font>
                         <Font name="Dubai Medium" size="23.0" />
                      </font>
                   </Label>
                </children>
             </Pane>
-            <JFXButton alignment="BASELINE_LEFT" graphicTextGap="10.0" prefHeight="56.0" prefWidth="252.0" stylesheets="@../../resources/css/style.css" text="Register patient consult" textFill="WHITE">
+            <JFXButton id="menuButton" fx:id="btnRegisterPatient" alignment="BASELINE_LEFT" graphicTextGap="10.0" onAction="#loadCreatePatient" prefHeight="56.0" prefWidth="252.0" stylesheets="@../../resources/css/style.css" text="Register patient consult" textFill="WHITE">
                <padding>
                   <Insets left="50.0" />
                </padding>
@@ -41,7 +41,7 @@
                   <Font name="MS Outlook" size="13.0" />
                </font>
             </JFXButton>
-            <JFXButton alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="10.0" prefHeight="56.0" prefWidth="252.0" stylesheets="@../../resources/css/style.css" text="Update patient consult" textFill="WHITE">
+            <JFXButton id="menuButton" fx:id="btnUpdatePatient" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="10.0" onAction="#loadUpdatePatient" prefHeight="56.0" prefWidth="252.0" stylesheets="@../../resources/css/style.css" text="Update patient consult" textFill="WHITE">
                <padding>
                   <Insets left="50.0" />
                </padding>
@@ -52,7 +52,7 @@
                   <Font name="MS Outlook" size="13.0" />
                </font>
             </JFXButton>
-            <JFXButton alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="66.0" prefHeight="56.0" prefWidth="252.0" stylesheets="@../../resources/css/style.css" text="Delete Patient consult" textFill="WHITE">
+            <JFXButton id="menuButton" fx:id="btnDeletePatient" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="66.0" onAction="#loadDeletePatient" prefHeight="56.0" prefWidth="252.0" stylesheets="@../../resources/css/style.css" text="Delete Patient consult" textFill="WHITE">
                <padding>
                   <Insets left="50.0" />
                </padding>
@@ -63,7 +63,7 @@
                   <Font name="MS Outlook" size="13.0" />
                </font>
             </JFXButton>
-            <JFXButton alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="122.0" prefHeight="56.0" prefWidth="252.0" stylesheets="@../../resources/css/style.css" text="Check patient consult" textFill="WHITE">
+            <JFXButton id="menuButton" fx:id="btnCheckPatient" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="122.0" onAction="#loadCheckPatient" prefHeight="56.0" prefWidth="252.0" stylesheets="@../../resources/css/style.css" text="Check patient consult" textFill="WHITE">
                <padding>
                   <Insets left="50.0" />
                </padding>
@@ -76,6 +76,5 @@
             </JFXButton>
          </children>
       </VBox>
-      <GlyphsBrowser layoutX="308.0" layoutY="65.0" prefHeight="517.0" />
    </children>
 </AnchorPane>
