--- a/src/view/layouts/updatePatient.fxml
+++ b/src/view/layouts/updatePatient.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXTreeTableView?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.UpdateController">
    <children>
       <Pane layoutX="265.0" layoutY="213.0" prefHeight="626.0" prefWidth="730.0" style="-fx-background-color: #252529;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <JFXTreeTableView layoutX="24.0" layoutY="303.0" prefHeight="309.0" prefWidth="688.0" />
+            <JFXTreeTableView fx:id="tableView" layoutX="20.0" layoutY="320.0" prefHeight="284.0" prefWidth="690.0" stylesheets="@../../resources/css/style.css" />
+            <Label layoutX="304.0" layoutY="62.0" text="Search  appointment" textFill="WHITE" />
          </children></Pane>
    </children>
 </AnchorPane>
