changes in model and transactionDB

--- a/src/view/layouts/createPatient.fxml
+++ b/src/view/layouts/createPatient.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CreateController">
+<AnchorPane fx:id="anchorPane2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CreateController">
    <children>
-      <Pane id="test" fx:id="pane" prefHeight="626.0" prefWidth="730.0" style="-fx-background-color: #252529;">
+      <Pane id="test" fx:id="createPane" prefHeight="626.0" prefWidth="730.0" style="-fx-background-color: #252529;">
          <children>
             <JFXTextField id="textField" fx:id="txtPatientName" layoutX="222.0" layoutY="122.0" prefHeight="26.0" prefWidth="297.0" promptText="Patient name" stylesheets="@../../resources/css/style.css">
                <effect>
