--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -1,14 +1,3 @@
-/* @font-face{
-    font-family: 'Optien';
-    src: url('..\fonts\Optien.ttf');
-} */
-
-#tableView{
-    -fx-background-color: #3A3A3D;
-    -fx-text-fill: #ffffff;
-}
-
-
 #menuButton{
     -fx-background-color: #252529;
     -fx-text-fill: #ffffff;
@@ -26,7 +15,8 @@
 }
 
 #textField{
-    -fx-text-fill: #ffffff;
+    -fx-text-fill: #ffffffff;
+    -fx-prompt-text-fill: #ffffffff;
 }
 
 #buttonSave{
@@ -46,7 +36,54 @@
 #buttonCancel:hover{
     -fx-background-color: #2a2a35;
 }
-/* 
-#test{
-    -fx-font-family: "Optien";
-} */
+
+.table-view .column-header-background{
+    -fx-background-color: linear-gradient(#131313 0%, #424141 100%);
+}
+
+.table-view .column-header-background .label{
+    -fx-background-color: transparent;
+    -fx-text-fill: white;
+}
+
+.table-view .column-header {
+    -fx-background-color: transparent;
+}
+
+.table-view .table-cell{
+    -fx-text-fill: white;
+}
+
+.table-row-cell{
+    -fx-background-color: -fx-table-cell-border-color, #616161;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em;
+}
+
+.table-row-cell:odd{
+    -fx-background-color: -fx-table-cell-border-color, #424242;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em;
+}
+
+.table-row-cell:selected {
+    -fx-background-color: linear-gradient(#6b3a63 0%, #77358b 100%);
+    -fx-background-insets: 0;
+    -fx-background-radius: 1;
+}
+
+.table-view > .virtual-flow > .scroll-bar:vertical,
+.table-view > .virtual-flow > .scroll-bar:vertical > .track,
+.table-view > .virtual-flow > .scroll-bar:vertical > .track-background,
+.table-view > .virtual-flow > .scroll-bar:horizontal,
+.table-view > .virtual-flow > .scroll-bar:horizontal > .track,
+.table-view > .virtual-flow > .scroll-bar:horizontal > .track-background {
+    -fx-background-color: transparent;
+}
+
+
+
+.table-view > .virtual-flow > .scroll-bar > .increment-button,
+.table-view > .virtual-flow > .scroll-bar > .decrement-button {
+    -fx-opacity: 0;
+}
