--- a/src/view/layouts/createPatient.fxml
+++ b/src/view/layouts/createPatient.fxml
@@ -5,12 +5,13 @@
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.effect.Reflection?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CreateController">
+<AnchorPane fx:id="anchorPane2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CreateController">
    <children>
       <Pane id="test" fx:id="createPane" prefHeight="626.0" prefWidth="730.0" style="-fx-background-color: #252529;">
          <children>
@@ -35,11 +36,11 @@
                <font>
                   <Font size="14.0" />
                </font></JFXTextField>
-            <JFXDatePicker id="textField" fx:id="dateAppointment" defaultColor="#4059a9" editable="false" layoutX="233.0" layoutY="436.0" prefHeight="29.0" prefWidth="297.0" stylesheets="@../../resources/css/style.css">
+            <JFXDatePicker id="textField" fx:id="dateAppointment" defaultColor="#4059a9" editable="false" layoutX="233.0" layoutY="436.0" prefHeight="29.0" prefWidth="297.0" promptText="Vaccine Date" stylesheets="@../../resources/css/style.css">
                <effect>
-                  <Reflection />
+                  <ColorAdjust brightness="1.0" />
                </effect></JFXDatePicker>
-            <JFXComboBox id="textField" fx:id="cmbGender" layoutX="222.0" layoutY="202.0" prefHeight="28.0" prefWidth="297.0" promptText="Gender" stylesheets="@../../resources/css/style.css">
+            <JFXComboBox fx:id="cmbGender" layoutX="222.0" layoutY="202.0" prefHeight="28.0" prefWidth="297.0" promptText="Gender" stylesheets="@../../resources/css/style.css">
                <effect>
                   <Reflection />
                </effect>
