Updated some validations
Co-authored-by: Pedro Soares <pedro2000.nex@hotmail.com>

--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -98,3 +98,16 @@
 .combo-box-popup .list-view .jfx-list-cell:selected .custom-jfx-list-view-icon {
     -fx-fill: #5264AE;
 }
+
+.payload {
+    -fx-hgap: 20px;
+    -fx-padding: 40px;
+
+    -fx-background-color: #2969c0;
+    -fx-background-radius: 50px;
+
+    -fx-border-radius: 50px;
+    -fx-border-width: 5px;
+    -fx-border-color: black;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.8), 10, 0, 0, 0);
+}
