--- a/src/view/layouts/main.fxml
+++ b/src/view/layouts/main.fxml
@@ -11,12 +11,12 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="982.0" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="982.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
    <children>
-      <Pane fx:id="mainPane" layoutX="252.0" prefHeight="626.0" prefWidth="730.0" style="-fx-background-color: #252529;" />
+      <Pane fx:id="mainPane" layoutX="252.0" prefHeight="626.0" prefWidth="730.0" style="-fx-background-color: #252529;" stylesheets="@../../resources/css/style.css" />
       <VBox id="vbox" prefHeight="626.0" prefWidth="256.0" style="-fx-background-color: #252529;" stylesheets="@../../resources/css/style.css">
          <children>
-            <Pane prefHeight="180.0" prefWidth="252.0">
+            <Pane prefHeight="180.0" prefWidth="242.0">
                <children>
                   <ImageView fitHeight="74.0" fitWidth="69.0" layoutX="14.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -52,23 +52,13 @@
                   <Font name="MS Outlook" size="13.0" />
                </font>
             </JFXButton>
-            <JFXButton id="menuButton" fx:id="btnDeletePatient" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="66.0" onAction="#loadDeletePatient" prefHeight="56.0" prefWidth="252.0" stylesheets="@../../resources/css/style.css" text="Delete Patient consult" textFill="WHITE">
+            <Pane prefHeight="263.0" prefWidth="242.0" />
+            <JFXButton id="menuButton" fx:id="btnUpdatePatient1" alignment="BASELINE_LEFT" graphicTextGap="10.0" onAction="#loadUpdatePatient" prefHeight="56.0" prefWidth="252.0" stylesheets="@../../resources/css/style.css" text="Update patient consult" textFill="WHITE">
                <padding>
                   <Insets left="50.0" />
                </padding>
                <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="USER_TIMES" size="17" />
-               </graphic>
-               <font>
-                  <Font name="MS Outlook" size="13.0" />
-               </font>
-            </JFXButton>
-            <JFXButton id="menuButton" fx:id="btnCheckPatient" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="122.0" onAction="#loadCheckPatient" prefHeight="56.0" prefWidth="252.0" stylesheets="@../../resources/css/style.css" text="Check patient consult" textFill="WHITE">
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-               <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="SEARCH" size="17" />
+                  <FontAwesomeIcon fill="WHITE" glyphName="REPEAT" size="17" />
                </graphic>
                <font>
                   <Font name="MS Outlook" size="13.0" />
