--- a/src/view/layouts/updatePatient.fxml
+++ b/src/view/layouts/updatePatient.fxml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.effect.Reflection?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="updateAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.UpdateController">
    <children>
       <Pane layoutX="265.0" layoutY="213.0" prefHeight="626.0" prefWidth="730.0" style="-fx-background-color: #252529;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label layoutX="304.0" layoutY="62.0" text="Search  appointment" textFill="WHITE" />
-            <TableView fx:id="tableView" layoutX="13.0" layoutY="142.0" prefHeight="363.0" prefWidth="704.0" stylesheets="@../../resources/css/style.css">
+            <Label layoutX="268.0" layoutY="29.0" text="Search  appointment" textFill="WHITE">
+               <font>
+                  <Font name="Rockwell" size="26.0" />
+               </font></Label>
+            <TableView fx:id="tableView" layoutX="14.0" layoutY="168.0" prefHeight="363.0" prefWidth="704.0" stylesheets="@../../resources/css/style.css">
               <columns>
                 <TableColumn fx:id="clID" prefWidth="50.0" text="ID" />
                 <TableColumn fx:id="clPatientName" prefWidth="66.0" text="Patient Name" />
@@ -26,10 +32,20 @@
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
-            <JFXButton id="buttonSave" fx:id="btnNext" layoutX="339.0" layoutY="545.0" stylesheets="@../../resources/css/style.css" text="Next">
+            <JFXButton id="buttonSave" fx:id="btnNext" layoutX="338.0" layoutY="562.0" stylesheets="@../../resources/css/style.css" text="Next">
                <effect>
                   <Reflection />
                </effect>
+            </JFXButton>
+            <JFXTextField id="textField" fx:id="txtSearch" layoutX="259.0" layoutY="98.0" prefHeight="32.0" prefWidth="192.0" promptText="Search" stylesheets="@../../resources/css/style.css">
+               <font>
+                  <Font name="Bookman Old Style" size="17.0" />
+               </font>
+            </JFXTextField>
+            <JFXButton id="buttonSave" fx:id="btnSearch" layoutX="471.0" layoutY="98.0" stylesheets="@../../resources/css/style.css" text="Search">
+               <graphic>
+                  <FontAwesomeIcon fill="WHITE" glyphName="SEARCH" />
+               </graphic>
             </JFXButton>
          </children></Pane>
    </children>
