--- a/src/view/layouts/createPatient.fxml
+++ b/src/view/layouts/createPatient.fxml
@@ -8,48 +8,21 @@
 <?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.effect.Reflection?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="anchorPane2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CreateController">
    <children>
       <Pane id="test" fx:id="createPane" prefHeight="626.0" prefWidth="730.0" style="-fx-background-color: #252529;">
          <children>
-            <JFXTextField id="textField" fx:id="txtPatientName" layoutX="222.0" layoutY="122.0" prefHeight="26.0" prefWidth="297.0" promptText="Patient name" stylesheets="@../../resources/css/style.css">
-               <effect>
-                  <Reflection />
-               </effect>
-               <font>
-                  <Font name="Bookman Old Style" size="14.0" />
-               </font></JFXTextField>
-            <JFXTextField id="textField" fx:id="txtAge" layoutX="222.0" layoutY="276.0" prefHeight="26.0" prefWidth="297.0" promptText="Age" stylesheets="@../../resources/css/style.css">
-               <effect>
-                  <Reflection />
-               </effect>
-               <font>
-                  <Font size="14.0" />
-               </font></JFXTextField>
-            <JFXTextField id="textField" fx:id="txtWeight" layoutX="222.0" layoutY="346.0" prefHeight="26.0" prefWidth="297.0" promptText="Weight" stylesheets="@../../resources/css/style.css">
-               <effect>
-                  <Reflection />
-               </effect>
-               <font>
-                  <Font size="14.0" />
-               </font></JFXTextField>
-            <JFXDatePicker id="textField" fx:id="dateAppointment" defaultColor="#4059a9" editable="false" layoutX="233.0" layoutY="436.0" prefHeight="29.0" prefWidth="297.0" promptText="Vaccine Date" stylesheets="@../../resources/css/style.css">
-               <effect>
-                  <ColorAdjust brightness="1.0" />
-               </effect></JFXDatePicker>
-            <JFXComboBox fx:id="cmbGender" layoutX="222.0" layoutY="202.0" prefHeight="28.0" prefWidth="297.0" promptText="Gender" stylesheets="@../../resources/css/style.css">
-               <effect>
-                  <Reflection />
-               </effect>
-            </JFXComboBox>
-            <JFXButton id="buttonSave" fx:id="btnSave" layoutX="251.0" layoutY="525.0" prefHeight="35.0" prefWidth="69.0" stylesheets="@../../resources/css/style.css" text="Save">
+            <JFXButton id="button" fx:id="btnSave" layoutX="234.0" layoutY="524.0" prefHeight="42.0" prefWidth="77.0" stylesheets="@../../resources/css/style.css" text="Save" textFill="WHITE">
                <effect>
                   <Reflection />
                </effect></JFXButton>
-            <JFXButton id="buttonCancel" fx:id="btnCancel" layoutX="444.0" layoutY="525.0" prefHeight="35.0" prefWidth="69.0" stylesheets="@../../resources/css/style.css" text="Cancel">
+            <JFXButton id="button" fx:id="btnCancel" layoutX="419.0" layoutY="524.0" prefHeight="42.0" prefWidth="77.0" stylesheets="@../../resources/css/style.css" text="Cancel">
                <effect>
                   <Reflection />
                </effect></JFXButton>
@@ -58,6 +31,63 @@
                   <Font name="Rockwell" size="25.0" />
                </font>
             </Label>
+            <GridPane layoutX="207.0" layoutY="108.0" prefHeight="378.0" prefWidth="338.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <JFXTextField id="textField" fx:id="txtPatientName" prefHeight="26.0" prefWidth="297.0" promptText="Patient name" stylesheets="@../../resources/css/style.css" GridPane.rowIndex="1">
+                     <effect>
+                        <Reflection />
+                     </effect>
+                     <font>
+                        <Font name="Bookman Old Style" size="14.0" />
+                     </font>
+                  </JFXTextField>
+                  <JFXComboBox fx:id="cmbGender" prefHeight="29.0" prefWidth="346.0" promptText="Gender" stylesheets="@../../resources/css/style.css" GridPane.rowIndex="2">
+                     <effect>
+                        <Reflection>
+                           <input>
+                              <ColorAdjust brightness="1.0" />
+                           </input>
+                        </Reflection>
+                     </effect>
+                  </JFXComboBox>
+                  <JFXTextField id="textField" fx:id="txtAge" prefHeight="26.0" prefWidth="297.0" promptText="Age" stylesheets="@../../resources/css/style.css" GridPane.rowIndex="3">
+                     <effect>
+                        <Reflection />
+                     </effect>
+                     <font>
+                        <Font name="Bookman Old Style" size="14.0" />
+                     </font>
+                  </JFXTextField>
+                  <JFXTextField id="textField" fx:id="txtWeight" prefHeight="26.0" prefWidth="297.0" promptText="Weight" stylesheets="@../../resources/css/style.css" GridPane.rowIndex="4">
+                     <effect>
+                        <Reflection />
+                     </effect>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </JFXTextField>
+                  <JFXDatePicker fx:id="dateAppointment" defaultColor="#4059a9" editable="false" prefHeight="34.0" prefWidth="377.0" promptText="Vaccine Date" stylesheets="@../../resources/css/style.css" GridPane.rowIndex="5">
+                     <effect>
+                        <Reflection>
+                           <input>
+                              <ColorAdjust brightness="1.0" />
+                           </input>
+                        </Reflection>
+                     </effect>
+                  </JFXDatePicker>
+               </children>
+            </GridPane>
          </children></Pane>
    </children>
 </AnchorPane>
