--- a/src/view/layouts/main.fxml
+++ b/src/view/layouts/main.fxml
@@ -4,6 +4,7 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.Reflection?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,9 +12,21 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="982.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<AnchorPane id="radrius" fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="982.0" stylesheets="@../../resources/css/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
    <children>
-      <Pane fx:id="mainPane" layoutX="252.0" prefHeight="626.0" prefWidth="730.0" style="-fx-background-color: #252529;" stylesheets="@../../resources/css/style.css" />
+      <Pane fx:id="mainPane" layoutX="252.0" prefHeight="626.0" prefWidth="730.0" style="-fx-background-color: #252529;" stylesheets="@../../resources/css/style.css">
+         <children>
+            <ImageView fitHeight="714.0" fitWidth="881.0" layoutX="-75.0" layoutY="-88.0" opacity="0.49" pickOnBounds="true">
+               <image>
+                  <Image url="@../../resources/icons/neck.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="221.0" fitWidth="276.0" layoutX="527.0" layoutY="405.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../resources/icons/hiclipart.com.png" />
+               </image>
+            </ImageView>
+         </children></Pane>
       <VBox id="vbox" prefHeight="626.0" prefWidth="256.0" style="-fx-background-color: #252529;" stylesheets="@../../resources/css/style.css">
          <children>
             <Pane prefHeight="180.0" prefWidth="242.0">
@@ -30,35 +43,51 @@
                   </Label>
                </children>
             </Pane>
-            <JFXButton id="menuButton" fx:id="btnRegisterPatient" alignment="BASELINE_LEFT" graphicTextGap="10.0" onAction="#loadCreatePatient" prefHeight="56.0" prefWidth="252.0" stylesheets="@../../resources/css/style.css" text="Register patient consult" textFill="WHITE">
+            <JFXButton id="menuButton" fx:id="btnRegisterPatient" alignment="BASELINE_LEFT" graphicTextGap="10.0" onAction="#loadCreatePatient" prefHeight="57.0" prefWidth="242.0" stylesheets="@../../resources/css/style.css" text="Register patient consult" textFill="WHITE">
                <padding>
                   <Insets left="50.0" />
                </padding>
                <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="USER_PLUS" size="17" />
+                  <FontAwesomeIcon fill="#8f5fd7" glyphName="USER_PLUS" selectionFill="#3044c6" size="20" />
+               </graphic>
+               <font>
+                  <Font name="MS Outlook" size="14.0" />
+               </font>
+               <effect>
+                  <Reflection />
+               </effect>
+            </JFXButton>
+            <Pane prefHeight="54.0" prefWidth="242.0" />
+            <JFXButton id="menuButton" fx:id="btnUpdatePatient" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="10.0" onAction="#loadUpdatePatient" prefHeight="65.0" prefWidth="242.0" stylesheets="@../../resources/css/style.css" text="Update patient consult" textFill="WHITE">
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <graphic>
+                  <FontAwesomeIcon fill="#8f5fd7" glyphName="REPEAT" selectionFill="#3044c6" size="20" />
                </graphic>
                <font>
                   <Font name="MS Outlook" size="13.0" />
                </font>
             </JFXButton>
-            <JFXButton id="menuButton" fx:id="btnUpdatePatient" alignment="BASELINE_LEFT" graphicTextGap="10.0" layoutX="10.0" layoutY="10.0" onAction="#loadUpdatePatient" prefHeight="56.0" prefWidth="252.0" stylesheets="@../../resources/css/style.css" text="Update patient consult" textFill="WHITE">
+            <Pane prefHeight="263.0" prefWidth="242.0">
+               <children>
+                  <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="46.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../resources/icons/mask.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="216.0" fitWidth="290.0" layoutX="3.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../resources/icons/border.png" />
+                     </image>
+                  </ImageView>
+               </children></Pane>
+            <JFXButton id="menuButton" fx:id="btn" alignment="BASELINE_LEFT" graphicTextGap="10.0" prefHeight="60.0" prefWidth="242.0" stylesheets="@../../resources/css/style.css" text="About Software" textFill="WHITE">
                <padding>
                   <Insets left="50.0" />
                </padding>
                <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="REPEAT" size="17" />
-               </graphic>
-               <font>
-                  <Font name="MS Outlook" size="13.0" />
-               </font>
-            </JFXButton>
-            <Pane prefHeight="263.0" prefWidth="242.0" />
-            <JFXButton id="menuButton" fx:id="btnUpdatePatient1" alignment="BASELINE_LEFT" graphicTextGap="10.0" onAction="#loadUpdatePatient" prefHeight="56.0" prefWidth="252.0" stylesheets="@../../resources/css/style.css" text="Update patient consult" textFill="WHITE">
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-               <graphic>
-                  <FontAwesomeIcon fill="WHITE" glyphName="REPEAT" size="17" />
+                  <FontAwesomeIcon fill="#8f5fd7" glyphName="INFO_CIRCLE" selectionFill="#3044c6" size="20" wrappingWidth="14.571428298950195" />
                </graphic>
                <font>
                   <Font name="MS Outlook" size="13.0" />
