--- a/src/view/layouts/createPatient.fxml
+++ b/src/view/layouts/createPatient.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.effect.Reflection?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -18,6 +20,11 @@
    <children>
       <Pane id="test" fx:id="createPane" prefHeight="626.0" prefWidth="730.0" style="-fx-background-color: #252529;">
          <children>
+            <ImageView fitHeight="738.0" fitWidth="1005.0" opacity="0.15" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../resources/icons/a.jpg" />
+               </image>
+            </ImageView>
             <JFXButton id="button" fx:id="btnSave" layoutX="234.0" layoutY="524.0" prefHeight="42.0" prefWidth="77.0" stylesheets="@../../resources/css/style.css" text="Save" textFill="WHITE">
                <effect>
                   <Reflection />
